infrastructure/istio/telemetry-gateway.yaml
# 10.99.140.218
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: telemetry-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "kiali.demo"
    - "grafana.demo"
    - "prometheus.demo"
    - "jaeger.demo"
